Kubernetes.Deploy/cert-manager/stag/Ingress-stag.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: test-development
  name: nginx-app
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/issuer: letsencrypt-staging
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - dashboard.sakaryaproject.com
    secretName: test-staging-letsencrypt
  rules:
  - host: dashboard.sakaryaproject.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: web-api-service
            port: 
              number: 80
